# libhttp

./: Makefile.am  configure.ac  libhttp.pc.in
bench/: Makefile.am  bench.c
example/: Makefile.am  example.c
src/: Makefile.am  http.c  http.h  strchr_brk.h
test/: Makefile.am  test_header.c  test_http.h  test_method.c  test_reason.c  test_status.c  test_uri.c  test_version.c
